fix long dropdown list be hidden by portlet.

--- a/client/assets/css/styles.css
+++ b/client/assets/css/styles.css
@@ -1131,12 +1131,8 @@ Portlets
   /* display space on top for desktop view */
   .page-content {
     margin: 20px 0;
+    overflow: hidden;
   }
-}
-
-/* Page Content */
-.page-content {
-  overflow: hidden;
 }
 
 .page-content .page-content-fixed-header {
